--- a/sample.html
+++ b/sample.html
@@ -11,6 +11,8 @@
 <!-- Pollyfills -->
 <script type="text/javascript" src="js/sample/promise-polyfill-8.1.3.min.js"></script>
 <script type="text/javascript" src="js/sample/whatwg-fetch-3.0.0.min.js"></script>
+<script type="text/javascript" src="js/sample/padstart-pollyfill.js"></script>
+<script type="text/javascript" src="js/sample/array-from-pollyfill.js"></script>
 
 <!-- Page styling -->
 <script type="text/javascript" src="js/sample/jquery-1.11.3.min.js"></script>
