--- a/sample.html
+++ b/sample.html
@@ -47,7 +47,7 @@
 
     <div class="row">
         <h1 id="title" class="page-header">QZ Tray v<span id="qz-version">0</span>
-            <a class="pull-right btn btn-primary btn" href="https://qz.io/download">
+            <a class="pull-right btn btn-primary btn" target="_blank" href="https://qz.io/download">
                 <i class="fa fa-download"></i> Download QZ Tray
             </a>
         </h1>
