--- a/sample.html
+++ b/sample.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/gh-fork-ribbon.min.css" />
 
-<body id="qz-page" role="document">
+<body id="qz-page" role="document"  ondrop="drop(event);" ondragover="drag(event, true);" ondragleave="drag(event, false);">
 <a class="github-fork-ribbon" href="https://github.com/qzind/tray" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
 
 <nav class="navbar navbar-default navbar-static-top" role="navigation">
@@ -222,6 +222,7 @@
                                 <button type="button" class="btn btn-default" onclick="printCommand();">Commands</button>
                                 <button type="button" class="btn btn-default" onclick="printHex();">Hex</button>
                             </div>
+                            <button id="rawDropBtn" type="button" class="btn btn-primary" onclick="printDrop(event);">Print Dropped Item</button>
                         </div>
                         <div class="form-group">
                             <div>
@@ -366,6 +367,7 @@
                             <button type="button" class="btn btn-default" onclick="printHTML();">Print HTML</button>
                             <button type="button" class="btn btn-default" onclick="printPDF();">Print PDF</button>
                             <button type="button" class="btn btn-default" onclick="printImage();">Print Image</button>
+                            <button id="pxlDropBtn" type="button" class="btn btn-primary" onclick="printDrop(event);">Print Dropped Item</button>
                         </div>
                     </div>
                 </div>
@@ -2144,6 +2146,24 @@
         qz.print(config, printData).catch(displayError);
     }
 
+    function printDrop(evt) {
+        var button = evt.target || evt.srcElement;
+
+        var config = getUpdatedConfig();
+        var opts = getUpdatedOptions(true);
+
+        var type = button.id.indexOf("pxl") !== -1 ? 'pixel' : 'raw';
+        var format = $(button).attr("data-format");
+        var flavor = $(button).attr("data-flavor");
+        var base64 = $(button).attr("data-base64").split("base64,")[1];
+
+        var printData = [
+            { type: type, format: format, flavor: flavor, data: base64, options: opts }
+        ];
+
+        qz.print(config, printData).catch(displayError);
+    }
+
 
     /// Serial ///
     function listSerialPorts() {
@@ -2618,6 +2638,9 @@
         $("#rawForceRaw").prop('checked', false);
         $("#rawCopies").val(1);
 
+        //button
+        $("#rawDropBtn").hide();
+
         //printer
         $("#pLangEPL").prop('checked', true);
         $("#pX").val('0');
@@ -2670,6 +2693,9 @@
         $("#pxlBoundHeight").val('');
         $("#pxlBoundsActive").prop('checked', false);
         $("#pxlBoundsGroup").css('display', 'none');
+
+        //button
+        $("#pxlDropBtn").hide();
 
         //printer
         $("#pPxlWidth").val('');
@@ -3369,6 +3395,91 @@
                 printer = 'NONE';
             }
             $("#configPrinter").html(printer);
+        }
+    }
+
+    function getBase64(file) {
+        return new Promise((resolve, reject) => {
+            const reader = new FileReader();
+            reader.readAsDataURL(file);
+            reader.onload = () => resolve(reader.result);
+            reader.onerror = error => reject(error);
+        });
+    }
+
+    function drop(evt) {
+        evt.preventDefault();
+        var items = evt.dataTransfer.items;
+        var setupDropButton = function(format, name, data) {
+            var tabHref;
+            var buttonId;
+            switch(format) {
+                case "pdf":
+                case "image":
+                case "html":
+                    buttonId = "#pxlDropBtn"
+                    tabHref = "#pxlContent";
+                    break;
+                default:
+                    buttonId = "#rawDropBtn"
+                    tabHref = "#rawContent";
+            }
+            // Select the appropriate tab
+            $(".nav-tabs a[href='" + tabHref + "']").tab('show');
+
+            // Show the appropriate button
+            var button = $(buttonId);
+            button.attr("data-format", format);
+            button.attr("data-flavor", "base64");
+            button.attr("data-base64", data);
+            button.html('Print dropped "' + name + '"');
+            button.show();
+            button.fadeOut(300).fadeIn(500);
+        }
+
+        if (items) {
+            // Use DataTransferItemList interface to access the file(s)
+            var item = items[0];  // Only process the first file
+            if (item.kind === "file") {
+                var file = item.getAsFile();
+                console.log("Dropped file:", file);
+                getBase64(file).then(function(base64) { 
+                    var name = file.name;
+                    var extension = name.substring(name.lastIndexOf('.') + 1, name.length) || '';
+                    switch(extension.toLowerCase()) {
+                        case 'pdf':
+                            setupDropButton("pdf", name, base64);
+                            break;
+                        case 'htm':
+                        case 'html':
+                            setupDropButton("html", name, base64);
+                            break;
+                        case 'png':
+                        case 'jpg':
+                        case 'jpeg':
+                        case 'gif':
+                        case 'bmp':
+                            setupDropButton("image", name, base64);
+                            break;
+                        // assume all others are "raw"
+                        default:
+                            setupDropButton("command", name, base64);
+                    }
+                }).catch(displayError);
+                
+            } else {
+                displayError("Please drag a valid file");
+            }
+        }
+        document.getElementById("qz-page").classList.remove("drag-target"); 
+    }
+
+    function drag(evt, entering) {
+        evt.preventDefault();
+        if(entering) {
+            document.getElementById("qz-page").classList.add("drag-target");
+        } else {
+            document.getElementById("qz-page").classList.remove("drag-target");
         }
     }
 </script>
