Add file drag-and-drop support (#1219)
Add file drag-and-drop support
Closes #990

--- a/sample.html
+++ b/sample.html
@@ -22,7 +22,8 @@
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/gh-fork-ribbon.min.css" />
 
-<body id="qz-page" role="document">
+<body id="qz-page" role="document"  ondrop="handleFileDrop(event);" ondragover="drag(event, true);" ondragleave="drag(event, false);">
+<input id="fileUpload" type="file"/>
 <a class="github-fork-ribbon" href="https://github.com/qzind/tray" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
 
 <nav class="navbar navbar-default navbar-static-top" role="navigation">
@@ -221,7 +222,9 @@
                             <div id="rawCommandsGroup" class="btn-group">
                                 <button type="button" class="btn btn-default" onclick="printCommand();">Commands</button>
                                 <button type="button" class="btn btn-default" onclick="printHex();">Hex</button>
+                                <button id="rawDropBtn" type="button" class="btn btn-primary" onclick="printFileDrop(event);" data-type="raw">Hidden</button>
                             </div>
+                            <label for="fileUpload" type="button" class="btn btn-default"><i class="fa fa-folder-open-o"></i> Upload a file...</label>
                         </div>
                         <div class="form-group">
                             <div>
@@ -366,6 +369,8 @@
                             <button type="button" class="btn btn-default" onclick="printHTML();">Print HTML</button>
                             <button type="button" class="btn btn-default" onclick="printPDF();">Print PDF</button>
                             <button type="button" class="btn btn-default" onclick="printImage();">Print Image</button>
+                            <button id="pxlDropBtn" type="button" class="btn btn-primary" onclick="printFileDrop(event);" data-type="pixel"></button>
+                            <label for="fileUpload" type="button" class="btn btn-default upload-button"><i class="fa fa-folder-open-o"></i> Upload a file...</label>
                         </div>
                     </div>
                 </div>
@@ -2144,6 +2149,24 @@
         qz.print(config, printData).catch(displayError);
     }
 
+    function printFileDrop(evt) {
+        var button = evt.target || evt.srcElement;
+
+        var config = getUpdatedConfig();
+
+        var type = $(button).attr('data-type');
+        var format = $(button).attr('data-format');
+        var flavor = $(button).attr('data-flavor');
+        var base64 = $(button).attr('data-base64').split('base64,')[1];
+        var opts = getUpdatedOptions(type === 'pixel');
+
+        var printData = [
+            { type: type, format: format, flavor: flavor, data: base64, options: opts }
+        ];
+
+        qz.print(config, printData).catch(displayError);
+    }
+
 
     /// Serial ///
     function listSerialPorts() {
@@ -2618,6 +2641,9 @@
         $("#rawForceRaw").prop('checked', false);
         $("#rawCopies").val(1);
 
+        //file upload
+        $("#rawDropBtn").hide();
+
         //printer
         $("#pLangEPL").prop('checked', true);
         $("#pX").val('0');
@@ -2670,6 +2696,9 @@
         $("#pxlBoundHeight").val('');
         $("#pxlBoundsActive").prop('checked', false);
         $("#pxlBoundsGroup").css('display', 'none');
+
+        //file upload
+        $("#pxlDropBtn").hide();
 
         //printer
         $("#pPxlWidth").val('');
@@ -2730,6 +2759,10 @@
         var lang = $("input[name='pLanguage']:checked").parent('label').text().trim();
 
         var appendLang = function(element, lang) {
+            // Skip formatting of file drop button if format = "command"
+            if($(element).attr("data-format") === "command") {
+                return;
+            }
             var text = $(element).html();
             var label = text.split("(")[0];
             $(element).html(label + " (<strong>" + lang + "</strong>)");
@@ -2811,6 +2844,12 @@
         $("#fileButton").on('change', function(e) {
             if (this.files && this.files[0]) {
                 $("#fileLocation").val(this.files[0]['name']);
+            }
+        });
+
+        $("#fileUpload").on('change', function(e) {
+            if (this.files && this.files[0]) {
+                handleFileDrop(this.files);
             }
         });
 
@@ -3369,6 +3408,116 @@
                 printer = 'NONE';
             }
             $("#configPrinter").html(printer);
+        }
+    }
+
+    function getBase64(file) {
+        return new Promise((resolve, reject) => {
+            const reader = new FileReader();
+            reader.readAsDataURL(file);
+            reader.onload = () => resolve(reader.result);
+            reader.onerror = error => reject(error);
+        });
+    }
+
+    function handleFileDrop(evt) {
+        var file;
+        var stayOnTab = false;
+
+        if(evt.dataTransfer && evt.dataTransfer.items) {
+            // Event from button
+            evt.preventDefault();
+
+            var item = evt.dataTransfer.items[0];
+            if(item.kind === "file") {
+                file = item.getAsFile();
+            } else {
+                displayError("Please drag a valid file");
+                return;
+            }
+        } else {
+            var files = evt;
+            // Event from file upload
+            file = files[0];
+            // Ensure we're on the right tab
+            stayOnTab = true;
+        }
+        
+        var setupDropButton = function(format, name, data, stayOnTab) {
+            var tabHref;
+            var buttonId;
+            switch(format) {
+                case "pdf":
+                case "html":
+                case "image":
+                    buttonId = "#pxlDropBtn"
+                    tabHref = "#pxlContent";
+                    break;
+                default:
+                    buttonId = "#rawDropBtn"
+                    tabHref = "#rawContent";
+            }
+            
+            var button = $(buttonId);
+            if(stayOnTab) {
+                // File upload button can't change tabs
+                if($("#pxlContent").is(":visible") && format === "command") {
+                    displayError('File format "' + format + '" is not supported on this tab.');
+                    return;
+                }
+                if($("#rawContent").is(":visible") && format !== "command") {
+                    button = $("#rawDropBtn");
+                }
+            } else {
+                // Select the appropriate tab
+                $(".nav-tabs a[href='" + tabHref + "']").tab('show');
+            }
+
+            // Show the appropriate button
+            button.attr("data-format", format);
+            button.attr("data-flavor", "base64");
+            button.attr("data-base64", data);
+            button.html('Print dropped "' + name + '"');
+            button.show();
+            updateRawButtons();
+            button.fadeOut(300).fadeIn(500);
+        }
+
+        if (file) {
+            console.log("Dropped file:", file);
+            getBase64(file).then(function(base64) { 
+                var name = file.name;
+                var extension = name.substring(name.lastIndexOf('.') + 1, name.length) || '';
+                switch(extension.toLowerCase()) {
+                    case 'pdf':
+                        setupDropButton("pdf", name, base64, stayOnTab);
+                        break;
+                    case 'htm':
+                    case 'html':
+                        setupDropButton("html", name, base64, stayOnTab);
+                        break;
+                    case 'png':
+                    case 'jpg':
+                    case 'jpeg':
+                    case 'gif':
+                    case 'bmp':
+                        setupDropButton("image", name, base64, stayOnTab);
+                        break;
+                    // assume all others are "raw"
+                    default:
+                        setupDropButton("command", name, base64, stayOnTab);
+                }
+            }).catch(displayError); 
+        }
+        $("#qz-page").removeClass("drag-target"); 
+    }
+
+    function drag(evt, entering) {
+        evt.preventDefault();
+        if(entering) {
+            $("#qz-page").addClass("drag-target");
+        } else {
+            $("#qz-page").removeClass("drag-target");
         }
     }
 </script>
