--- a/sample.html
+++ b/sample.html
@@ -205,6 +205,7 @@
                             </div>
                             <div class="btn-group">
                                 <button type="button" class="btn btn-default" onclick="printFile('zpl_sample.txt');">zpl_sample.txt</button>
+                                <button type="button" class="btn btn-default" onclick="printFile('escpos_sample.bin');">escpos_sample.bin</button>
                                 <button type="button" class="btn btn-default" onclick="printFile('fgl_sample.txt');">fgl_sample.txt</button>
                                 <button type="button" class="btn btn-default" onclick="printFile('epl_sample.txt');">epl_sample.txt</button>
                                 <button type="button" class="btn btn-default" onclick="printFile('sbpl_sample.txt');">sbpl_sample.txt</button>
