Added 'default' ColorType

--- a/sample.html
+++ b/sample.html
@@ -391,6 +391,7 @@
                                                     <option value="color">Color</option>
                                                     <option value="grayscale">Grayscale</option>
                                                     <option value="blackwhite">Black & White</option>
+                                                    <option value="default">Default</option>
                                                 </select>
                                             </div>
 
