Fix hex examples Splitting hex into separate commands causes issues.

--- a/sample.html
+++ b/sample.html
@@ -1885,33 +1885,39 @@
             case 'EPL':
                 //defaults to 'type: raw' and 'format: command'
                 printData = [
-                    { flavor: 'hex', data: '0a4e0a713831320a51313231382c32363b207120616e6420' },
-                    { flavor: 'hex', data: '512076616c7565732065646974656420746f207265666c65' },
-                    { flavor: 'hex', data: '63742034783620696e63682073697a652061742032303320' },
-                    { flavor: 'hex', data: '6470690a42352c32362c302c31412c332c372c3135322c42' },
-                    { flavor: 'hex', data: '2c2231323334220a413331302c32362c302c332c312c312c' },
-                    { flavor: 'hex', data: '4e2c22534b55203030303030204d46472030303030220a41' },
-                    { flavor: 'hex', data: '3331302c35362c302c332c312c312c4e2c22515a2d547261' },
-                    { flavor: 'hex', data: '79204a617661204170706c69636174696f6e220a41333130' },
-                    { flavor: 'hex', data: '2c38362c302c332c312c312c4e2c2254455354205052494e' },
-                    { flavor: 'hex', data: '54205355434345535346554c220a413331302c3131362c30' },
-                    { flavor: 'hex', data: '2c332c312c312c4e2c2246524f4d2053414d504c452e4854' },
-                    { flavor: 'hex', data: '4d4c220a413331302c3134362c302c332c312c312c4e2c22' },
-                    { flavor: 'hex', data: '5553494e4720484558220a50312c310a' }
+                    { flavor: 'hex', data:
+                        '0a4e0a713831320a51313231382c32363b207120616e6420' +
+                        '512076616c7565732065646974656420746f207265666c65' +
+                        '63742034783620696e63682073697a652061742032303320' +
+                        '6470690a42352c32362c302c31412c332c372c3135322c42' +
+                        '2c2231323334220a413331302c32362c302c332c312c312c' +
+                        '4e2c22534b55203030303030204d46472030303030220a41' +
+                        '3331302c35362c302c332c312c312c4e2c22515a2d547261' +
+                        '79204a617661204170706c69636174696f6e220a41333130' +
+                        '2c38362c302c332c312c312c4e2c2254455354205052494e' +
+                        '54205355434345535346554c220a413331302c3131362c30' +
+                        '2c332c312c312c4e2c2246524f4d2053414d504c452e4854' +
+                        '4d4c220a413331302c3134362c302c332c312c312c4e2c22' +
+                        '5553494e4720484558220a50312c310a'
+                    }
                 ];
                 break;
             case 'ZPL':
                 printData = [
-                    { flavor: 'hex', data: '5e58410d0a5e464f35302c35300d0a5e41444e2c33362c3' },
-                    { flavor: 'hex', data: '2300d0a5e46445052494e544544205749544820515a2054' },
-                    { flavor: 'hex', data: '5241590d0a5e46445553494e472068657820434f4d4d414' },
-                    { flavor: 'hex', data: 'e44530d0a5e46530d0a5e585a' }
+                    { flavor: 'hex', data:
+                        '5e58410d0a5e4346302c33300d0a5e464f35302c35305e4' +
+                        '6445052494e544544205749544820515a20545241595e46' +
+                        '530d0a5e464f35302c3130305e46445553494e472048455' +
+                        '820434f4d4d414e44535e46530d0a5e585a'
+                    }
                 ];
                 break;
             case 'ESCPOS':
                 printData = [
-                    { flavor: 'hex', data: '0d0a5052494e544544205749544820515a20545241590d0a0d0a' },
-                    { flavor: 'hex', data: '5553494e472068657820434f4d4d414e44530d0a0d0a0d0a0d0a' }
+                    { flavor: 'hex', data:
+                        '0d0a5052494e544544205749544820515a20545241590d0a0d0a' +
+	                    '5553494e472068657820434f4d4d414e44530d0a0d0a0d0a0d0a'
+	                }
                 ];
                 break;
             default:
