Update sample.html to reflect most available raw options

--- a/sample.html
+++ b/sample.html
@@ -339,7 +339,7 @@
                                                     <option value="double">double</option>
                                                     <option value="triple">triple</option>
                                                     <option value="single-legacy">single-legacy</option>
-                                                    <option value="double-legacy">single-legacy</option>
+                                                    <option value="double-legacy">double-legacy</option>
                                                 </select>
                                             </div>
                                             <div class="form-group form-inline">
