Make HTML tests platform-specific, use TTF font for more consistent rendering between platforms

--- a/test/qz/printer/action/resources/html-sample.html
+++ b/test/qz/printer/action/resources/html-sample.html
@@ -3,8 +3,25 @@
     <meta charset="utf-8" />
     <title>QZ Raw HTML Sample</title>
     <style>
-      body { font-family: sans-serif; }
-      .bw { width: 2in; height: 1in; background: #000; color: #fff; display: flex; align-items: center; justify-content: center; }
+        /* open-sans-regular - latin */
+        @font-face {
+          font-family: 'Open Sans';
+            src: url('fonts/open-sans-v44-latin-regular.ttf') format('truetype');
+        }
+
+        body {
+            font-family: 'Open Sans';
+        }
+
+        .bw {
+            width: 192px;
+            height: 96px;
+            background: #000;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     </style>
   </head>
   <body>
