--- a/sample.html
+++ b/sample.html
@@ -17,10 +17,10 @@
 <!-- Page styling -->
 <script type="text/javascript" src="js/sample/jquery-1.11.3.min.js"></script>
 <script type="text/javascript" src="js/sample/bootstrap.min.js"></script>
-<link rel="stylesheet" href="css/font-awesome.min.css" />
-<link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="css/gh-fork-ribbon.min.css" />
+<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css"/>
+<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
+<link rel="stylesheet" href="css/style.css" type="text/css"/>
+<link rel="stylesheet" href="css/gh-fork-ribbon.min.css" type="text/css"/>
 
 <body id="qz-page" role="document"  ondrop="handleFileDrop(event);" ondragover="drag(event, true);" ondragleave="drag(event, false);">
 <input id="fileUpload" type="file"/>
@@ -1507,7 +1507,7 @@
 
     function startConnection(config) {
         // Connect to a print-server instance and/or override secure port handling
-        config ||= {};
+        config = config ? config : {};
         config.host = includedValue($('#connectionHost'));
         config.usingSecure = isChecked($('#connectionUsingSecure'));
 
@@ -3414,11 +3414,11 @@
     }
 
     function getBase64(file) {
-        return new Promise((resolve, reject) => {
+        return new Promise(function(resolve, reject) {
             const reader = new FileReader();
             reader.readAsDataURL(file);
-            reader.onload = () => resolve(reader.result);
-            reader.onerror = error => reject(error);
+            reader.onload = function() { resolve(reader.result); }
+            reader.onerror = function() { reject(error); }
         });
     }
 
