Remove unneeded changes

--- a/sample.html
+++ b/sample.html
@@ -17,10 +17,10 @@
 <!-- Page styling -->
 <script type="text/javascript" src="js/sample/jquery-1.11.3.min.js"></script>
 <script type="text/javascript" src="js/sample/bootstrap.min.js"></script>
-<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css"/>
-<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
-<link rel="stylesheet" href="css/style.css" type="text/css"/>
-<link rel="stylesheet" href="css/gh-fork-ribbon.min.css" type="text/css"/>
+<link rel="stylesheet" href="css/font-awesome.min.css" />
+<link rel="stylesheet" href="css/bootstrap.min.css" />
+<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/gh-fork-ribbon.min.css" />
 
 <body id="qz-page" role="document"  ondrop="handleFileDrop(event);" ondragover="drag(event, true);" ondragleave="drag(event, false);">
 <input id="fileUpload" type="file"/>
